[gd_scene load_steps=24 format=3 uid="uid://b0c43sr0v666w"]

[ext_resource type="Script" path="res://Scripts/puzzle_piece.gd" id="1_uhv7f"]
[ext_resource type="Script" path="res://Scripts/bevelled_puzzle_piece_shape.gd" id="2_2oxp2"]
[ext_resource type="TileSet" uid="uid://mgcmixwg7fq1" path="res://Assets/TileSets/MainTileSet.tres" id="3_3l438"]
[ext_resource type="TileSet" uid="uid://chmck55rlgg50" path="res://Assets/TileSets/DirtTileSet.tres" id="4_c62oi"]
[ext_resource type="Texture2D" uid="uid://8dmxehskgryu" path="res://Assets/Sprites/arrows.svg" id="4_obp8e"]
[ext_resource type="Script" path="res://Scripts/rotating_arrows.gd" id="5_os0q1"]
[ext_resource type="Script" path="res://Scripts/puzzle_piece_connector.gd" id="6_qba2m"]
[ext_resource type="Script" path="res://Scripts/puzzle_piece_shadow.gd" id="7_k3mtu"]
[ext_resource type="Material" uid="uid://ds33yj24o01gh" path="res://Assets/Materials/PuzzlePieceOutlineMaterial.tres" id="8_cqfvh"]
[ext_resource type="Script" path="res://Scripts/puzzle_piece_outline.gd" id="9_0xn0f"]
[ext_resource type="Script" path="res://Scripts/outline_type_resource.gd" id="10_6o36s"]
[ext_resource type="Texture2D" uid="uid://dbgo1qklyynha" path="res://Assets/Sprites/moving_outline_texture.png" id="11_7l2qo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_812v4"]
size = Vector2(256, 256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o7ve1"]
size = Vector2(35, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nwyis"]
size = Vector2(35, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_512yp"]
size = Vector2(35, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bocoj"]
size = Vector2(35, 70)

[sub_resource type="Resource" id="Resource_08waj"]
script = ExtResource("10_6o36s")
color = Color(0, 0, 0, 1)
visible = false
width = 2.0
scrolling_speed = 0.0
z_index = 0

[sub_resource type="Resource" id="Resource_ysjuc"]
script = ExtResource("10_6o36s")
color = Color(0, 0, 0, 1)
visible = true
width = 4.0
scrolling_speed = 0.0
z_index = -1

[sub_resource type="Resource" id="Resource_fa8wk"]
script = ExtResource("10_6o36s")
color = Color(1, 1, 1, 1)
visible = true
width = 4.0
texture = ExtResource("11_7l2qo")
scrolling_speed = 1.4
z_index = 1

[sub_resource type="Resource" id="Resource_vsofx"]
script = ExtResource("10_6o36s")
color = Color(1, 0, 0, 1)
visible = true
width = 4.0
texture = ExtResource("11_7l2qo")
scrolling_speed = 1.4
z_index = 1

[sub_resource type="SegmentShape2D" id="SegmentShape2D_i6rnc"]
a = Vector2(0, -128)
b = Vector2(0, 128)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8wnkx"]

[node name="PuzzlePiece" type="Area2D" groups=["PuzzlePieces"]]
script = ExtResource("1_uhv7f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_812v4")
metadata/_edit_lock_ = true

[node name="Shape" type="Polygon2D" parent="."]
clip_children = 1
polygon = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128, -128, -128)
script = ExtResource("2_2oxp2")
bevel_width = 3.7

[node name="Background" type="TileMapLayer" parent="Shape" groups=["AffectedByInternalLight"]]
position = Vector2(-25.6, -25.6)
scale = Vector2(1.6, 1.6)
tile_set = ExtResource("3_3l438")
collision_enabled = false

[node name="Foreground" type="TileMapLayer" parent="Shape" groups=["AffectedByInternalLight"]]
position = Vector2(-25.6, -25.6)
scale = Vector2(1.6, 1.6)
tile_set = ExtResource("3_3l438")

[node name="Dirt" type="TileMapLayer" parent="Shape" groups=["AffectedByInternalLight"]]
position = Vector2(-25.6, -25.6)
scale = Vector2(1.6, 1.6)
tile_set = ExtResource("4_c62oi")

[node name="Arrows" type="Sprite2D" parent="Shape"]
visible = false
modulate = Color(0, 0, 0, 0.168627)
scale = Vector2(0.137801, 0.13741)
texture = ExtResource("4_obp8e")
script = ExtResource("5_os0q1")
default_color = Color(0, 0, 0, 0.23)
selected_color = Color(1, 1, 1, 0.747)
default_scale = Vector2(0.138, 0.138)
selected_scale = Vector2(0.207, 0.207)
metadata/_edit_pinned_properties_ = [&"default_scale", &"selected_scale", &"default_color", &"selected_color"]

[node name="Connectors" type="Node2D" parent="Shape"]
z_index = 1
metadata/_edit_lock_ = true

[node name="RightConnector" type="Area2D" parent="Shape/Connectors" node_paths=PackedStringArray("side_collider", "bevel_side")]
position = Vector2(128, 0)
collision_mask = 5
script = ExtResource("6_qba2m")
side_collider = NodePath("../../../Colliders/RightCollider")
bevel_side = NodePath("../../../BevelRight")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shape/Connectors/RightConnector"]
position = Vector2(-16.5, 0)
shape = SubResource("RectangleShape2D_o7ve1")
metadata/_edit_lock_ = true

[node name="LeftConnector" type="Area2D" parent="Shape/Connectors" node_paths=PackedStringArray("side_collider", "bevel_side")]
position = Vector2(-128, 0)
rotation = 3.14159
collision_mask = 5
script = ExtResource("6_qba2m")
side_collider = NodePath("../../../Colliders/LeftCollider")
bevel_side = NodePath("../../../BevelLeft")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shape/Connectors/LeftConnector"]
position = Vector2(-16.5, 0)
shape = SubResource("RectangleShape2D_nwyis")
metadata/_edit_lock_ = true

[node name="TopConnector" type="Area2D" parent="Shape/Connectors" node_paths=PackedStringArray("side_collider", "bevel_side")]
position = Vector2(0, -128)
rotation = -1.57079
collision_mask = 5
script = ExtResource("6_qba2m")
side_collider = NodePath("../../../Colliders/TopCollider")
bevel_side = NodePath("../../../BevelTop")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shape/Connectors/TopConnector"]
position = Vector2(-16.5, 0)
shape = SubResource("RectangleShape2D_512yp")
metadata/_edit_lock_ = true

[node name="BottomConnector" type="Area2D" parent="Shape/Connectors" node_paths=PackedStringArray("side_collider", "bevel_side")]
position = Vector2(0, 128)
rotation = 1.57079
collision_mask = 5
script = ExtResource("6_qba2m")
side_collider = NodePath("../../../Colliders/BottomCollider")
bevel_side = NodePath("../../../BevelBottom")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shape/Connectors/BottomConnector"]
position = Vector2(-16.5, 0)
shape = SubResource("RectangleShape2D_bocoj")
metadata/_edit_lock_ = true

[node name="Shadow" type="Line2D" parent="."]
z_index = -2
texture_repeat = 2
position = Vector2(4, 4)
points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
width = 9.62
default_color = Color(0, 0, 0, 0.666667)
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("7_k3mtu")
metadata/_edit_lock_ = true

[node name="Outline" type="Line2D" parent="."]
z_index = -1
texture_repeat = 2
material = ExtResource("8_cqfvh")
points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
closed = true
width = 4.0
default_color = Color(0, 0, 0, 1)
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("9_0xn0f")
hidden_outline = SubResource("Resource_08waj")
normal_outline = SubResource("Resource_ysjuc")
dragging_outline = SubResource("Resource_fa8wk")
error_outline = SubResource("Resource_vsofx")
highlight_outline = SubResource("Resource_fa8wk")
metadata/_edit_lock_ = true

[node name="Colliders" type="Node2D" parent="."]
visible = false
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="LeftCollider" type="StaticBody2D" parent="Colliders"]
position = Vector2(-128, 0)
collision_layer = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/LeftCollider"]
shape = SubResource("SegmentShape2D_i6rnc")

[node name="RightCollider" type="StaticBody2D" parent="Colliders"]
position = Vector2(128, 0)
collision_layer = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/RightCollider"]
shape = SubResource("SegmentShape2D_i6rnc")

[node name="TopCollider" type="StaticBody2D" parent="Colliders"]
position = Vector2(0, -128)
rotation = 1.57079
collision_layer = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/TopCollider"]
shape = SubResource("SegmentShape2D_i6rnc")

[node name="BottomCollider" type="StaticBody2D" parent="Colliders"]
position = Vector2(0, 128)
rotation = 1.57079
collision_layer = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/BottomCollider"]
shape = SubResource("SegmentShape2D_i6rnc")

[node name="BevelLeft" type="Polygon2D" parent="."]
self_modulate = Color(1, 1, 1, 0.360784)
material = SubResource("ShaderMaterial_8wnkx")
polygon = PackedVector2Array(-128, 128, -128, -128, -124.3, -124.3, -124.3, 124.3)

[node name="BevelTop" type="Polygon2D" parent="."]
self_modulate = Color(0.745617, 0.745617, 0.745617, 0.360784)
material = SubResource("ShaderMaterial_8wnkx")
polygon = PackedVector2Array(-128, -128, 128, -128, 124.3, -124.3, -124.3, -124.3)

[node name="BevelRight" type="Polygon2D" parent="."]
self_modulate = Color(1, 1, 1, 0.501961)
material = SubResource("ShaderMaterial_8wnkx")
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(128, -128, 128, 128, 124.3, 124.3, 124.3, -124.3)

[node name="BevelBottom" type="Polygon2D" parent="."]
self_modulate = Color(1, 1, 1, 0.360784)
material = SubResource("ShaderMaterial_8wnkx")
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(128, 128, -128, 128, -124.3, 124.3, 124.3, 124.3)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
